--- a/sample/requirements.txt
+++ b/sample/requirements.txt
@@ -1,34 +1,29 @@
-django-cms>=3.5,<3.6
-djangocms-admin-style>=1.2,<1.3
-django-treebeard>=4.0,<5.0
-
-https://github.com/divio/djangocms-text-ckeditor/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-file/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-link/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-style/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-googlemap/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-snippet/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-picture/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-video/archive/master.zip?1522215563.9
-https://github.com/divio/djangocms-column/archive/master.zip?1522215563.9
-easy_thumbnails
-django-filer>=1.3
-Django<2.0
-pytz
-django-classy-tags>=0.7
-html5lib>=0.999999,<0.99999999
-Pillow>=3.0
-django-sekizai>=0.9
-six
-
-Django CMS Installation:
-	pip install --upgrade pip
-	pip install djangocms-installer
-
-CMS Plugins:
-	Tab & Accordion:
-		pip install git+https://github.com/MagicSolutions/django-cmsplugin-tabs.git#egg=django-cmsplugin-tabs
-	
-	# Don't install the polls plugin. Just for referennce.
-	Polls:
-		pip install -e git+http://git@github.com/divio/django-polls.git#egg=polls
+Install packages:-
+Django==1.11.7
+django-classy-tags==0.8.0
+django-cms==3.5.1
+-e git+https://github.com/MagicSolutions/django-cmsplugin-tabs.git@e390f341595b0c477efdebb99d76fd0a2a33d3f4#egg=django_cmsplugin_tabs
+django-filer==1.3.0
+django-formtools==2.1
+django-mptt==0.8.7
+django-polymorphic==1.3
+django-sekizai==0.10.0
+django-treebeard==4.2.1
+djangocms-admin-style==1.2.7
+djangocms-attributes-field==0.3.0
+djangocms-column==1.7.0
+djangocms-file==2.0.2
+djangocms-googlemap==1.1.1
+djangocms-link==2.1.2
+djangocms-picture==2.0.6
+djangocms-snippet==2.0.0
+djangocms-style==2.0.2
+djangocms-text-ckeditor==3.5.3
+djangocms-video==2.0.4
+easy-thumbnails==2.4.2
+html5lib==0.9999999
+MySQL-python==1.2.3
+Pillow==5.1.0
+pytz==2018.3
+six==1.11.0
+Unidecode==0.4.21
